removing strokethrough space after unavailable link

--- a/members/content.html
+++ b/members/content.html
@@ -29,8 +29,7 @@
             <a href="#logout">Logout</a>
             <a href="#messages"> Messages</a>
             <span style = "text-decoration: line-through;">
-            <a href="#bash">Bash</a>
-            </span>
+                <a href="#bash">Bash</a></span>
             (<span id="username"></span>)
             
             <div id="actualcontent">Loading...</div>
