added ngezhey phonology page

--- a/ngezhey/ngezhey.html
+++ b/ngezhey/ngezhey.html
@@ -1,23 +1,26 @@
 <!DOCTYPE HTML>
 <HEAD>
-    <TITLE>Ngezhey</TITLE>
-    <LINK REL="STYLESHEET" type="text/css" href="../sty.css">
-   <link rel="shortcut icon" href="../images/favicon.ico" type="x-icon">
-        <link rel="icon" href="../images/favicon.ico" type="x-icon">
- </HEAD>
+	<TITLE>Ngezhey</TITLE>
+	<LINK REL="STYLESHEET" type="text/css" href="../sty.css">
+	<link rel="shortcut icon" href="../images/favicon.ico" type="x-icon">
+	<link rel="icon" href="../images/favicon.ico" type="x-icon">
+</HEAD>
 <BODY>
-    <a href="../index.html">Home</a>
-    <H1>Ngezhey Resources</H1>
-    <p>Here are some links to pages about the language Ngezhey.</p>
-    <ul>
-        <li><a href="english-to-ngezhey.html">English --> Ngezhey Dictionary</a></li>
-        <li><a href="ngezhey-to-english.html">Ngezhey --> English Dictionary</a></li>
-        <li>Ngezhey Grammar
-            <ul>
-                <li><a href="word-order.html">Word order</a></li>
-            </ul>
-        </li>
-        <li>Ngezhey Orthography</li>
-        <li>Ngezhey Morphology</li>
-    </ul>
+	<a href="../index.html">Home</a>
+	<H1>Ngezhey Resources</H1>
+	<p>Here are some links to pages about the language Ngezhey.</p>
+	<ul>
+		<li><a href="english-to-ngezhey.html">English --> Ngezhey Dictionary</a></li>
+		<li><a href="ngezhey-to-english.html">Ngezhey --> English Dictionary</a></li>
+		<li>Ngezhey Grammar
+			<ul>
+				<li><a href="word-order.html">Word order</a></li>
+			</ul>
+		</li>
+		<li>Ngezhey Phonology</li>
+			<ul>
+				<li><a href="phonology.html">Phonology</a></li>
+			</ul>
+		<li>Ngezhey Morphology</li>
+	</ul>
 </BODY>
