--- a/ngezhey/phonology.html
+++ b/ngezhey/phonology.html
@@ -10,30 +10,30 @@
 <Body>
 	<a href="../index.html">Home</a>|<a href="ngezhey.html">Ngezhey</a>
 	<h1>Ngezhey Phonology</h1>
-	<h2 id="contents">
+	<h2 id="contents">Contents</h2>
 	<ol>
-		<li><a href="#contents">contents</a></li>
-		<li><a href="#phonemes">phonemes</a></li>
-		<li><a href="#phonotactics">phonotactics</a></li>
+		<li><a href="#contents">Contents</a></li>
+		<li><a href="#phonemes">Phonemes</a></li>
+		<li><a href="#phonotactics">Phonotactics</a></li>
 	</ol>
-	<h2 id="phonemes">phonemes</h2>
+	<h2 id="phonemes">Phonemes</h2>
 		<table>
 			<tr>
 				<td colspan=2 rowspan=2></td>
-				<th colspan=8>place</th>
+				<th colspan=8>Place</th>
 			</tr>
 			<tr>
-				<th>bilabial</th>
-				<th>labiodental</th>
-				<th>dental</th>
-				<th>alveolar</th>
-				<th>palatal</th>
-				<th>velar</th>
-				<th>glottal</th>
+				<th>Bilabial</th>
+				<th>Labiodental</th>
+				<th>Dental</th>
+				<th>Alveolar</th>
+				<th>Palatal</th>
+				<th>Velar</th>
+				<th>Glottal</th>
 			</tr>
 			<tr>
-				<th rowspan=4>manner</th>
-				<th>fricative</th>
+				<th rowspan=4>Manner</th>
+				<th>Fricative</th>
 				<td>ɸ,β</td>
 				<td>f,v</td>
 				<td>θ,ð</td>
@@ -43,7 +43,7 @@
 				<td>h,ɦ</td>
 			</tr>
 			<tr>
-				<th>plosive</th>
+				<th>Plosive</th>
 				<td>p,b</td>
 				<td></td>
 				<td></td>
@@ -53,7 +53,7 @@
 				<td></td>
 			</tr>
 			<tr>
-				<th>plosive</th>
+				<th>Plosive</th>
 				<td>m</td>
 				<td></td>
 				<td></td>
@@ -63,7 +63,7 @@
 				<td></td>
 			</tr>
 		</table>
-	<h2 id="phonotactics">phonotactics</h2>
+	<h2 id="phonotactics">Phonotactics</h2>
 		<p>
 			The phonotactics of Ngezhey are simple.
 			The syllable structure of native words is (C)V(C),
