added orthography page

--- a/ngezhey/ngezhey.html
+++ b/ngezhey/ngezhey.html
@@ -17,10 +17,16 @@
 				<li><a href="word-order.html">Word order</a></li>
 			</ul>
 		</li>
-		<li>Ngezhey Phonology</li>
+		<li>Ngezhey Phonology
 			<ul>
 				<li><a href="phonology.html">Phonology</a></li>
 			</ul>
+		</li>
+		<li>Ngezhey Orthography
+			<ul>
+				<li><a href="orthography.html">Orthography</a></li>
+			</ul>
+		</li>
 		<li>Ngezhey Morphology</li>
 	</ul>
 </BODY>
