fixed some typos/errors

--- a/ngezhey/orthography.html
+++ b/ngezhey/orthography.html
@@ -15,7 +15,7 @@
 		<li><a href="#contents">Contents</a></li>
 		<li><a href="#systems">Systems</a></li>
 		<li><a href="#graphemes">Graphemes</a></li>
-		<li><a href="#punctuation">Punctuation</a><li>
+		<li><a href="#punctuation">Punctuation</a></li>
 	</ol>
 	<h2 id="systems">Systems</h2>
 		<p>
@@ -89,6 +89,6 @@
 			Sentences are separated from eachother
 			with spaces (typically two or three in a row).
 			There is also quotation in Ngezhey.
-			The romanization uses paretheses ⟨(,)⟩.
+			The romanization uses paretheses ⟨(,)⟩ to quote.
 		</p>
 </BODY>
