obvious parenth is removed

--- a/ngezhey/orthography.html
+++ b/ngezhey/orthography.html
@@ -89,6 +89,6 @@
 			Sentences are separated from eachother
 			with spaces (typically two or three in a row).
 			There is also quotation in Ngezhey.
-			The romanization uses paretheses ⟨(,)⟩ to quote.
+			The romanization uses parentheses to quote.
 		</p>
 </BODY>
