--- a/ngezhey/phonology.html
+++ b/ngezhey/phonology.html
@@ -71,6 +71,6 @@
 			and V can be any vowel.
 			Loan words can have any syllable structure.
 			Words are formed from any syllables strung together.
-			There is no phonemic stress.
+			Stress is not phonemic.
 		</p>
 </BODY>
