--- a/ngezhey/ngezhey.html
+++ b/ngezhey/ngezhey.html
@@ -10,23 +10,19 @@
 	<H1>Ngezhey Resources</H1>
 	<p>Here are some links to pages about the language Ngezhey.</p>
 	<ul>
-		<li><a href="english-to-ngezhey.html">English --> Ngezhey Dictionary</a></li>
-		<li><a href="ngezhey-to-english.html">Ngezhey --> English Dictionary</a></li>
-		<li>Ngezhey Grammar
+		<li><h2>Dictionaries</h2>
+			<ul>
+				<li><a href="english-to-ngezhey.html">English --> Ngezhey Dictionary</a></li>
+				<li><a href="ngezhey-to-english.html">Ngezhey --> English Dictionary</a></li>
+			</ul>
+		</li>
+		<li><h2>Grammar</h2>
 			<ul>
 				<li><a href="word-order.html">Word order</a></li>
 			</ul>
 		</li>
-		<li>Ngezhey Phonology
-			<ul>
-				<li><a href="phonology.html">Phonology</a></li>
-			</ul>
-		</li>
-		<li>Ngezhey Orthography
-			<ul>
-				<li><a href="orthography.html">Orthography</a></li>
-			</ul>
-		</li>
-		<li>Ngezhey Morphology</li>
+		<li><h2><a href="phonology.html">Phonology</a></h2></li>
+		<li><h2><a href="orthography.html">Orthography</a></h2> </li>
+		<li><h2>Ngezhey Morphology</h2></li>
 	</ul>
 </BODY>
