--- a/ngezhey/ngezhey.html
+++ b/ngezhey/ngezhey.html
@@ -12,8 +12,8 @@
 	<ul>
 		<li><h2>Dictionaries</h2>
 			<ul>
-				<li><a href="english-to-ngezhey.html">English --> Ngezhey Dictionary</a></li>
-				<li><a href="ngezhey-to-english.html">Ngezhey --> English Dictionary</a></li>
+				<li><a href="english-to-ngezhey.html">English --> Ngezhey</a></li>
+				<li><a href="ngezhey-to-english.html">Ngezhey --> English</a></li>
 			</ul>
 		</li>
 		<li><h2>Grammar</h2>
