added wikipedia links

--- a/ngezhey/phonology.html
+++ b/ngezhey/phonology.html
@@ -65,12 +65,12 @@
 		</table>
 	<h2 id="phonotactics">Phonotactics</h2>
 		<p>
-			The phonotactics of Ngezhey are simple.
+			The <a href="https://en.wikipedia.org/wiki/phonotactics">phonotactics</a> of Ngezhey are simple.
 			The syllable structure of native words is (C)V(C),
 			where C can be any consonant
 			and V can be any vowel.
-			Loan words can have any syllable structure.
+			Loan words can have any <a href="https://en.wikipedia.org/wiki/syllable">syllable</a> structure.
 			Words are formed from any syllables strung together.
-			Stress is not phonemic.
+			<a href="https://en.wikipedia.org/wiki/stress">Stress</a> is not phonemic.
 		</p>
 </BODY>
