--- a/ngezhey/orthography.html
+++ b/ngezhey/orthography.html
@@ -21,16 +21,16 @@
 		<p>
 			There are two ways to write Ngezhey.
 			Ngezhey has its own script,
-			and there is a <a href="https://en.wikipedia.org/wiki/"romanization">romanization</a>.
+			and there is a <a href="https://en.wikipedia.org/wiki/romanization">romanization</a>.
 			This document will discuss the romanization only
 			because the Ngezhey script can not easily be displayed.
 		</p>
 		<p>
-			Ngezhey is written with one letter per <a href="https://en.wikipedia.org/wiki/"phoneme">phoneme</a>.
-			Native Ngezhey words are written with <a href="https://en.wikipedia.org/wiki/"letter case">minuscule</a> letters.
+			Ngezhey is written with one letter per <a href="https://en.wikipedia.org/wiki/phoneme">phoneme</a>.
+			Native Ngezhey words are written with <a href="https://en.wikipedia.org/wiki/letter case">minuscule</a> letters.
 			Loan words are written with majiscule letters.
 			Numbers are written the same in native and root words.
-			In <a href="https://en.wikipedia.org/wiki/"compound_(linguistics)">compound words</a>, the component words are written
+			In <a href="https://en.wikipedia.org/wiki/compound_(linguistics)">compound words</a>, the component words are written
 			with a dash ⟨-⟩ between them.
 			If a compound word is composed of both native and root words,
 			the native parts are written minuscule,
