--- a/ngezhey/orthography.html
+++ b/ngezhey/orthography.html
@@ -87,7 +87,7 @@
 		<p>
 			Ngezhey has little punctuation.
 			Sentences are separated from eachother
-			with spaces (typically two or three in a row).
+			with spaces (typically two or three in series).
 			There is also quotation in Ngezhey.
 			The romanization uses parentheses to quote.
 		</p>
