--- a/ngezhey/ngezhey.html
+++ b/ngezhey/ngezhey.html
@@ -23,6 +23,6 @@
 		</li>
 		<li><h2><a href="phonology.html">Phonology</a></h2></li>
 		<li><h2><a href="orthography.html">Orthography</a></h2> </li>
-		<li><h2>Ngezhey Morphology</h2></li>
+		<li><h2>Morphology</h2></li>
 	</ul>
 </BODY>
