added link to syntax page

--- a/ngezhey/ngezhey.html
+++ b/ngezhey/ngezhey.html
@@ -18,6 +18,7 @@
 		</li>
 		<li><h2>Grammar</h2>
 			<ul>
+				<li><a href="syntax.html">Syntax</a></li>
 				<li><a href="word-order.html">Word order</a></li>
 			</ul>
 		</li>
