corrected complementization to nominalization

--- a/ngezhey/syntax.html
+++ b/ngezhey/syntax.html
@@ -16,7 +16,7 @@
 			<li><a href="#typology">Typology</a></li>
 			<li><a href="#word order">Word Order</a></li>
 			<li><a href="#negation">Negation</a></li>
-			<li><a href="#complementization">Complementization</a></li>
+			<li><a href="#nominalization">Nominalization</a></li>
 		</ol>
 	<h2 id="typology">Typology</h2>
 		<p>
@@ -37,7 +37,7 @@
 			come after the words they describe,
 			and there are prepositions.
 			Particles such as the <a href="#negation">negator</a>
-			and <a href="complementization">complementizer</a>
+			and <a href="#nominalization">nominalizer</a>
 			also follow the words that they modify.
 		</p>
 		<p>
@@ -60,7 +60,7 @@
 			In other words, "[noun] xo" means "the [noun] that does not exist".
 			This is a less common use.
 		</p>
-	<h2 id="complementization">Complementization</h2>
+	<h2 id="nominalization">Nominalization</h2>
 		<p>
 			In Ngezhey, more intricate sentences can be formed
 			by acting on a clause as if it were a noun.
@@ -72,7 +72,7 @@
 			the particle "3o3".
 			For example, "[food] [new] [good]" ("Some food is new and good.")
 			becomes "[food] [new] 3o3 [good]" ("The fact that some food is new is good.").
-			Note that descriptors that come before the complementizer are not effected.
+			Note that descriptors that come before the nominalizer are not effected.
 			For example, "[food] [healthy] [new] 3o3 [good]" is "The fact that some food is healthy and new is good.",
 		</p>
 </BODY>
