--- a/ngezhey/phonology.html
+++ b/ngezhey/phonology.html
@@ -17,6 +17,7 @@
 		<li><a href="#phonotactics">Phonotactics</a></li>
 	</ol>
 	<h2 id="phonemes">Phonemes</h2>
+		<h3>Consonants</h3>
 		<table>
 			<tr>
 				<td colspan=2 rowspan=2></td>
@@ -61,6 +62,29 @@
 				<td>ɲ</td>
 				<td>ŋ</td>
 				<td></td>
+			</tr>
+		</table>
+		<h3>Vowels</h3>
+		<table>
+			<tr>
+				<td></td>
+				<th>Front</th>
+				<th>Back</th>
+			</tr>
+			<tr>
+				<th>Close</th>
+				<td>ɪ</td>
+				<td>ʊ</td>
+			</tr>
+			<tr>
+				<th>Mid</th>
+				<td>ɛ</th>
+				<td>ʌ</td>
+			</tr>
+			<tr>
+				<th>Open</th>
+				<td>æ</td>
+				<td>ɑ</td>
 			</tr>
 		</table>
 	<h2 id="phonotactics">Phonotactics</h2>
