--- a/ngezhey/orthography.html
+++ b/ngezhey/orthography.html
@@ -37,6 +37,7 @@
 			and the loans are written majuscule.
 		</p>
 	<h2 id="graphemes">Graphemes</h2>
+		<h3>Consonants</h3>
 		<table>
 			<tr>
 				<td colspan=2 rowspan=2></td>
@@ -83,6 +84,30 @@
 				<td></td>
 			</tr>
 		</table>
+		<h3>Vowels</h3>
+		<table>
+			<tr>
+				<td></td>
+				<th>Front</th>
+				<th>Back</th>
+			</tr>
+			<tr>
+				<th>Close</th>
+				<td>i</td>
+				<td>y</td>
+			</tr>
+			<tr>
+				<th>Mid</th>
+				<td>e</th>
+				<td>u</td>
+			</tr>
+			<tr>
+				<th>Open</th>
+				<td>a</td>
+				<td>o</td>
+			</tr>
+		</table>
+
 	<h2 id="punctiation">Punctuation</h2>
 		<p>
 			Ngezhey has little punctuation.
