--- a/ngezhey/orthography.html
+++ b/ngezhey/orthography.html
@@ -28,7 +28,7 @@
 		<p>
 			Ngezhey is written with one letter per <a href="https://en.wikipedia.org/wiki/phoneme">phoneme</a>.
 			Native Ngezhey words are written with <a href="https://en.wikipedia.org/wiki/letter case">minuscule</a> letters.
-			<a href="https://en.wikipedia.org/wiki/Loanword">Loan words</a> are written with majiscule letters.
+			<a href="https://en.wikipedia.org/wiki/Loanword">Loan words</a> are written with majuscule letters.
 			Numbers are written the same in native and loan words.
 			In <a href="https://en.wikipedia.org/wiki/compound_(linguistics)">compound words</a>, the component words are written
 			with a dash ⟨-⟩ between them.
