--- a/ngezhey/syntax.html
+++ b/ngezhey/syntax.html
@@ -41,7 +41,7 @@
 			also follow the words that they modify.
 		</p>
 		<p>
-			<a href="https://en.wikipedia.org/wiki/Independent_clause">Indepentet clauses</a>
+			<a href="https://en.wikipedia.org/wiki/Independent_clause">Independet clauses</a>
 			consist of a subject (noun) followed optionally by some descriptors.
 			<a href="https://en.wikipedia.org/wiki/Dependent_Clause#Relative_.28adjectival.29_clause">Relative clauses</a>
 			are formed by putting a descriptor immediately after the noun it describes.
