mistyped: root -> loan

--- a/ngezhey/orthography.html
+++ b/ngezhey/orthography.html
@@ -32,7 +32,7 @@
 			Numbers are written the same in native and loan words.
 			In <a href="https://en.wikipedia.org/wiki/compound_(linguistics)">compound words</a>, the component words are written
 			with a dash ⟨-⟩ between them.
-			If a compound word is composed of both native and root words,
+			If a compound word is composed of both native and loan words,
 			the native parts are written minuscule,
 			and the loans are written majuscule.
 		</p>
