added watrout game

--- a/games/games.html
+++ b/games/games.html
@@ -10,5 +10,8 @@
 			<h2><a href="pastureland/play.html">Cow Application</a></h2>
 			<img alt="cow" src="pastureland/cow.gif" style="width:100px;">
 		</li>
+		<li>
+			<h2><a href="watrout/play.html">Watrout!</a></h2>
+		</li>
 	</ul>
 </BODY> 
