--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
 			<h2><a href="games/games.html">Games</a></h2>
 			<ul>
 				<li>Cow Application</li>
+				<li>Collision Game</li>
 			</ul>
 		</li>
 		<li><h2><a HREF="ngezhey/ngezhey.html">Ngezhey</a></h2>
