--- a/404.html
+++ b/404.html
@@ -6,8 +6,8 @@
 	<link rel="icon" href="images/favicon.ico" type="x-icon">
 </HEAD>
 <BODY>
-	<h1>404 Not Found<h1>
+	<h1>404 Not Found</h1>
 	<p>
  The server has not found anything matching the Request-URI. No indication is given of whether the condition is temporary or permanent. The 410 (Gone) status code SHOULD be used if the server knows, through some internally configurable mechanism, that an old resource is permanently unavailable and has no forwarding address. This status code is commonly used when the server does not wish to reveal exactly why the request has been refused, or when no other response is applicable. 
-	 </p>
+	</p>
 </BODY>
