--- a/members/content.html
+++ b/members/content.html
@@ -1,23 +1,13 @@
 <!doctype HTML>
 <html>
-
 	<HEAD>
 		<TITLE>Loading...</TITLE>
 		<LINK REL="STYLESHEET" type="text/css" href="../sty.css">
 		<LINK REL="STYLESHEET" type="text/css" href="content.css">
 		<link rel="shortcut icon" href="../images/favicon.ico" type="x-icon">
 		<link rel="icon" href="../images/favicon.ico" type="x-icon">
-		<SCRIPT src="../geturl.js"></SCRIPT>
-		<SCRIPT src="content.js"></SCRIPT>
-		<SCRIPT src="post.js"></SCRIPT>
-		<SCRIPT src="preferences.js"></SCRIPT>
-		<SCRIPT src="comment.js"></SCRIPT>
-		<SCRIPT src="files.js"></SCRIPT>
-		<SCRIPT src="cats.js"></SCRIPT>
-		<SCRIPT src="message.js"></SCRIPT>
 	</HEAD>
-
-	<BODY onload="go();" onhashchange="go();">
+	<BODY>
 		<div id="content">
 			<a href="../index.html">Home</a><span id="navigation"></span>
 			<br>
@@ -36,5 +26,5 @@
 			<div id="actualcontent">Loading...</div>
 		</div>
 	</BODY>
-
+	<SCRIPT src="content.js"></SCRIPT>
 </html>
