--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<link rel="shortcut icon" href="images/favicon.ico" type="x-icon">
 	<link rel="icon" href="images/favicon.ico" type="x-icon">
 	<SCRIPT src="redirect.js"></SCRIPT>
+	<meta name="google-site-verification" content="vgt7m8dxrSqno80wgsww1wgYX1Fjo49X_0k_dFYCk2M" />
 </HEAD>
 <BODY onload="redirect();">
 	<br>
