--- a/members/login.html
+++ b/members/login.html
@@ -6,11 +6,11 @@
 	<link rel="icon" href="../images/favicon.ico" type="x-icon">
 	<SCRIPT src="../geturl.js"></SCRIPT>
 	<SCRIPT src="login.js"></SCRIPT>
- </HEAD>
+</HEAD>
 <BODY>
 	<a href="../index.html">Home</a>
 	<H1>Login to your account</H1>
-	Username: <input id="username"><br>
+	Username: <input id="username" autofocus><br>
 	Password: <input id="password" onKeyPress="maybeLogin(key);"><br>
 	<button onclick="login()" >Login</button>
 	<div id="content"></div>
