add links to phonemes

--- a/ngezhey/orthography.html
+++ b/ngezhey/orthography.html
@@ -55,32 +55,73 @@
 			<tr>
 				<th rowspan=4>Manner</th>
 				<th>Fricative</th>
-				<td>0,w</td>
-				<td>f,v</td>
-				<td>7,9</td>
-				<td>s,z</td>
-				<td>6,3</td>
-				<td>k,r</td>
-				<td>h,l</td>
+				<td>
+					<a href="https://en.wikipedia.org/wiki/voiceless_bilabial_fricative">0</a>,
+					<a href="https://en.wikipedia.org/wiki/voiced_bilabial_fricative">w</a>
+				</td>
+				<td>
+					<a href="https://en.wikipedia.org/wiki/voiceless_labiodental_fricative">f</a>,
+					<a href="https://en.wikipedia.org/wiki/voiced_labiodental_fricative">v</a>
+				</td>
+				<td>
+					<a href="https://en.wikipedia.org/wiki/voiceless_dental_fricative">7</a>,
+					<a href="https://en.wikipedia.org/wiki/voiced_dental_fricative">9</a>
+				</td>
+				<td>
+					<a href="https://en.wikipedia.org/wiki/voiceless_alveolar_fricative">s</a>,
+					<a href="https://en.wikipedia.org/wiki/voiced_alveolar_fricative">z</a>
+				</td>
+				<td>
+					<a href="https://en.wikipedia.org/wiki/voiceless_palatal_fricative">6</a>,
+					<a href="https://en.wikipedia.org/wiki/voiced_palatal_fricative">3</a>
+				</td>
+				<td>
+					<a href="https://en.wikipedia.org/wiki/voiceless_velar_fricative">k</a>,
+					<a href="https://en.wikipedia.org/wiki/voiced_velar_fricative">r</a>
+				</td>
+				<td>
+					<a href="https://en.wikipedia.org/wiki/voiceless_glottal_fricative">h</a>,
+					<a href="https://en.wikipedia.org/wiki/voiced_glottal_fricative">l</a>
+				</td>
 			</tr>
 			<tr>
 				<th>Plosive</th>
-				<td>p,b</td>
+				<td>
+					<a href="https://en.wikipedia.org/wiki/voiceless_bilabial_plosive">p</a>,
+					<a href="https://en.wikipedia.org/wiki/voiced_bilabial_plosive">b</a>
+				</td>
 				<td></td>
 				<td></td>
-				<td>t,d</td>
-				<td>x,j</td>
-				<td>c,g</td>
+				<td>
+					<a href="https://en.wikipedia.org/wiki/voiceless_alveolar_plosive">t</a>,
+					<a href="https://en.wikipedia.org/wiki/voiced_alveolar_plosive">d</a>
+				</td>
+				<td>
+					<a href="https://en.wikipedia.org/wiki/voiceless_palatal_plosive">x</a>,
+					<a href="https://en.wikipedia.org/wiki/voiced_palatal_plosive">j</a>
+				</td>
+				<td>
+					<a href="https://en.wikipedia.org/wiki/voiceless_velar_plosive">c</a>,
+					<a href="https://en.wikipedia.org/wiki/voiced_velar_plosive">g</a>
+				</td>
 				<td></td>
 			</tr>
 			<tr>
 				<th>Nasal</th>
-				<td>m</td>
+				<td>
+					<a href="https://en.wikipedia.org/wiki/voiced_bilabial_nasal">m</a>
+				</td>
 				<td></td>
 				<td></td>
-				<td>n</td>
-				<td>8</td>
-				<td>q</td>
+				<td>
+					<a href="https://en.wikipedia.org/wiki/voiced_alveolar_nasal">n</a>
+				</td>
+				<td>
+					<a href="https://en.wikipedia.org/wiki/voiced_palatal_nasal">8</a>
+				</td>
+				<td>
+					<a href="https://en.wikipedia.org/wiki/voiced_velar_nasal">q</a>
+				</td>
 				<td></td>
 			</tr>
 		</table>
@@ -93,18 +134,18 @@
 			</tr>
 			<tr>
 				<th>Close</th>
-				<td>i</td>
-				<td>y</td>
+				<td><a href="https://en.wikipedia.org/wiki/near-close_front_unrounded_vowel">i</a></td>
+				<td><a href="https://en.wikipedia.org/wiki/near-close_back_unrounded_vowel">y</a></td>
 			</tr>
 			<tr>
 				<th>Mid</th>
-				<td>e</th>
-				<td>u</td>
+				<td><a href="https://en.wikipedia.org/wiki/open-mid_front_unrounded_vowel">e</a></td>
+				<td><a href="https://en.wikipedia.org/wiki/open-mid_back_unrounded_vowel">u</a></td>
 			</tr>
 			<tr>
 				<th>Open</th>
-				<td>a</td>
-				<td>o</td>
+				<td><a href="https://en.wikipedia.org/wiki/near-open_front_unrounded_vowel">a</a></td>
+				<td><a href="https://en.wikipedia.org/wiki/near-open_back_unrounded_vowel">o</a></td>
 			</tr>
 		</table>
 
