--- a/ngezhey/phonology.html
+++ b/ngezhey/phonology.html
@@ -35,32 +35,73 @@
 			<tr>
 				<th rowspan=4>Manner</th>
 				<th>Fricative</th>
-				<td>ɸ,β</td>
-				<td>f,v</td>
-				<td>θ,ð</td>
-				<td>s,z</td>
-				<td>ç,ʝ</td>
-				<td>x,ɣ</td>
-				<td>h,ɦ</td>
+				<td>
+					<a href="https://en.wikipedia.org/wiki/voiceless_bilabial_fricative">ɸ</a>,
+					<a href="https://en.wikipedia.org/wiki/voiced_bilabial_fricative">β</a>
+				</td>
+				<td>
+					<a href="https://en.wikipedia.org/wiki/voiceless_labiodental_fricative">f</a>,
+					<a href="https://en.wikipedia.org/wiki/voiced_labiodental_fricative">v</a>
+				</td>
+				<td>
+					<a href="https://en.wikipedia.org/wiki/voiceless_dental_fricative">θ</a>,
+					<a href="https://en.wikipedia.org/wiki/voiced_dental_fricative">ð</a>
+				</td>
+				<td>
+					<a href="https://en.wikipedia.org/wiki/voiceless_alveolar_fricative">s</a>,
+					<a href="https://en.wikipedia.org/wiki/voiced_alveolar_fricative">z</a>
+				</td>
+				<td>
+					<a href="https://en.wikipedia.org/wiki/voiceless_palatal_fricative">ç</a>,
+					<a href="https://en.wikipedia.org/wiki/voiced_palatal_fricative">ʝ</a>
+				</td>
+				<td>
+					<a href="https://en.wikipedia.org/wiki/voiceless_velar_fricative">x</a>,
+					<a href="https://en.wikipedia.org/wiki/voiced_velar_fricative">ɣ</a>
+				</td>
+				<td>
+					<a href="https://en.wikipedia.org/wiki/voiceless_glottal_fricative">h</a>,
+					<a href="https://en.wikipedia.org/wiki/voiced_glottal_fricative">ɦ</a>
+				</td>
 			</tr>
 			<tr>
 				<th>Plosive</th>
-				<td>p,b</td>
+				<td>
+					<a href="https://en.wikipedia.org/wiki/voiceless_bilabial_plosive">p</a>,
+					<a href="https://en.wikipedia.org/wiki/voiced_bilabial_plosive">b</a>
+				</td>
 				<td></td>
 				<td></td>
-				<td>t,d</td>
-				<td>c,ɟ</td>
-				<td>k,g</td>
+				<td>
+					<a href="https://en.wikipedia.org/wiki/voiceless_alveolar_plosive">t</a>,
+					<a href="https://en.wikipedia.org/wiki/voiced_alveolar_plosive">d</a>
+				</td>
+				<td>
+					<a href="https://en.wikipedia.org/wiki/voiceless_palatal_plosive">c</a>,
+					<a href="https://en.wikipedia.org/wiki/voiced_palatal_plosive">ɟ</a>
+				</td>
+				<td>
+					<a href="https://en.wikipedia.org/wiki/voiceless_velar_plosive">k</a>,
+					<a href="https://en.wikipedia.org/wiki/voiced_velar_plosive">g</a>
+				</td>
 				<td></td>
 			</tr>
 			<tr>
 				<th>Nasal</th>
-				<td>m</td>
+				<td>
+					<a href="https://en.wikipedia.org/wiki/voiced_bilabial_nasal">m</a>
+				</td>
 				<td></td>
 				<td></td>
-				<td>n</td>
-				<td>ɲ</td>
-				<td>ŋ</td>
+				<td>
+					<a href="https://en.wikipedia.org/wiki/voiced_alveolar_nasal">n</a>
+				</td>
+				<td>
+					<a href="https://en.wikipedia.org/wiki/voiced_palatal_nasal">ɲ</a>
+				</td>
+				<td>
+					<a href="https://en.wikipedia.org/wiki/voiced_velar_nasal">ŋ</a>
+				</td>
 				<td></td>
 			</tr>
 		</table>
@@ -73,18 +114,18 @@
 			</tr>
 			<tr>
 				<th>Close</th>
-				<td>ɪ</td>
-				<td>ʊ</td>
+				<td><a href="https://en.wikipedia.org/wiki/near-close_front_unrounded_vowel">ɪ</a></td>
+				<td><a href="https://en.wikipedia.org/wiki/near-close_back_unrounded_vowel">ʊ</a></td>
 			</tr>
 			<tr>
 				<th>Mid</th>
-				<td>ɛ</th>
-				<td>ʌ</td>
+				<td><a href="https://en.wikipedia.org/wiki/open-mid_front_unrounded_vowel">ɛ</a></td>
+				<td><a href="https://en.wikipedia.org/wiki/open-mid_back_unrounded_vowel">ʌ</a></td>
 			</tr>
 			<tr>
 				<th>Open</th>
-				<td>æ</td>
-				<td>ɑ</td>
+				<td><a href="https://en.wikipedia.org/wiki/near-open_front_unrounded_vowel">æ</a></td>
+				<td><a href="https://en.wikipedia.org/wiki/near-open_back_unrounded_vowel">ɑ</a></td>
 			</tr>
 		</table>
 	<h2 id="phonotactics">Phonotactics</h2>
